--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,3 +1,5 @@
+/* Styling used for Login, UserProfileForm components. */
+
 /* Reset some default styles */
 * {
   margin: 0;
@@ -8,10 +10,11 @@
 .login-box {
   max-width: 400px;
   margin: auto;
+  margin-top: 50px;
   padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border: 2px solid #ccc;
+  border-radius: 5%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .login-heading {
@@ -32,16 +35,33 @@
   border-radius: 5px;
 }
 
-.submit-btn {
+.form-btn {
   padding: 10px;
   font-size: 16px;
-  background-color: #007bff;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  text-decoration: none;
+  text-align: center;
+  font-weight: 500;
+}
+
+.submit-btn {
+  background-color: #003055;
+  margin-bottom: 10px;
 }
 
 .submit-btn:hover {
-  background-color: #0056b3;
+  background-color: #0d558d;
+  font-weight: 700;
+}
+
+.toggle-state-btn {
+  background-color: #e6b220;
+}
+
+.toggle-state-btn:hover {
+  background-color: #ffd04e;
+  font-weight: 700;
 }
