Created item component and a container that renders the items. The container also gets the data and passes the info as props to items

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -8,6 +8,15 @@
 }
 
 .home-div {
+  width: 90%;
+  margin: auto;
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.info-div {
   width: 400px;
   margin: auto;
   margin-top: 25px;
